GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Declaration__c.field-meta.xml
<CustomField>
    <fullName>Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I declare that all the information submitted by me on this Timesheet is correct.</inlineHelpText>
    <label>DECLARATION</label>
    <type>Checkbox</type>
</CustomField>