GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Eligible_days__c.field-meta.xml
<CustomField>
    <fullName>Eligible_days__c</fullName>
    <label>Eligible days</label>
    <summaryFilterItems>
        <field>Timesheet_Entry__c.Type_of_Day__c</field>
        <operation>equals</operation>
        <value>Horaires décalés</value>
    </summaryFilterItems>
    <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>