GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Manager_1__c.field-meta.xml
<CustomField>
    <fullName>Manager_1__c</fullName>
    <formula>Owner:User.Manager.FirstName +&quot; &quot;+Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>