GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter your Manager here.</inlineHelpText>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>