GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/My_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Team__c</fullName>
    <formula>$User.Id= Owner:User.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team</label>
    <type>Checkbox</type>
</CustomField>