GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Pay_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period_End__c</fullName>
    <inlineHelpText>Enter the Pay Period End Date here.</inlineHelpText>
    <label>Pay Period End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>