GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Pay_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period_Start__c</fullName>
    <inlineHelpText>Enter the Pay Period Start Date here.</inlineHelpText>
    <label>Pay Period Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>