GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Payroll_Number__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Number__c</fullName>
    <label>Payroll Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>