GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Due__c</fullName>
    <formula>Eligible_days__c *5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Due (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>