GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Total_Days_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Worked__c</fullName>
    <label>Total Days Worked</label>
    <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>