GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Total_HOL_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_HOL_Hours__c</fullName>
    <inlineHelpText>Total number of Holiday hours for this Timesheet.</inlineHelpText>
    <label>Total HOL Hours</label>
    <summarizedField>Timesheet_Entry__c.HOL_Hours__c</summarizedField>
    <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>