GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Total_Other_Pd_Time_Off_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Pd_Time_Off_Hrs__c</fullName>
    <inlineHelpText>Total number of Other Paid Time Off hours for this Timesheet.</inlineHelpText>
    <label>Total Other Pd Time Off Hrs</label>
    <summarizedField>Timesheet_Entry__c.Other_Paid_Time_Off_Hrs__c</summarizedField>
    <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>