GearsetPOC/force-app/main/default/objects/Timesheet__c/fields/Total_Paid_Time_Off_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Time_Off_Hours__c</fullName>
    <inlineHelpText>Total number of Paid Time Off (PTO + Other PTO) hours for this Timesheet.</inlineHelpText>
    <label>Total Paid Time Off Hours</label>
    <summarizedField>Timesheet_Entry__c.Paid_Time_Off__c</summarizedField>
    <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>