GearsetPOC/force-app/main/default/objects/Timesheet__c/recordTypes/Timesheet.recordType-meta.xml
<RecordType>
    <fullName>Timesheet</fullName>
    <active>true</active>
    <label>Timesheet</label>
</RecordType>