GearsetPOC/force-app/main/default/objects/Timesheet__c/listViews/All_My_TImesheets.listView-meta.xml
<ListView>
    <fullName>All_My_TImesheets</fullName>
    <columns>NAME</columns>
    <columns>Pay_Period_Month__c</columns>
    <columns>Pay_Period_Start__c</columns>
    <columns>Pay_Period_End__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Days_Worked__c</columns>
    <columns>Eligible_days__c</columns>
    <columns>Total_Amount_Due__c</columns>
    <columns>Days_Paid__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Days_Unpaid__c</columns>
    <columns>Amount_Pending__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My TImesheets</label>
    <language>en_US</language>
</ListView>