GearsetPOC/force-app/main/default/objects/Timesheet__c/listViews/My_Teams_Timesheets.listView-meta.xml
<ListView>
    <fullName>My_Teams_Timesheets</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Employee_Type__c</columns>
    <columns>Pay_Period_Month__c</columns>
    <columns>Validated__c</columns>
    <columns>Status__c</columns>
    <columns>Eligible_days__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Amount_Pending__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Pay_Period_End__c</field>
        <operation>equals</operation>
        <value>LAST_N_MONTHS:3</value>
    </filters>
    <label>My Teams Timesheets</label>
    <language>en_US</language>
    <sharedTo>
        <group>Timesheet_Manager</group>
    </sharedTo>
</ListView>