GearsetPOC/force-app/main/default/objects/Timesheet__c/listViews/Pending_Payments.listView-meta.xml
<ListView>
    <fullName>Pending_Payments</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Employee_Type__c</columns>
    <columns>Manager_1__c</columns>
    <columns>Pay_Period_Month__c</columns>
    <columns>Status__c</columns>
    <columns>Eligible_days__c</columns>
    <columns>Total_Amount_Due__c</columns>
    <columns>Days_Paid__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Days_Unpaid__c</columns>
    <columns>Amount_Pending__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Validated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Resubmitted</value>
    </filters>
    <filters>
        <field>Amount_Pending__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Pay_Period_End__c</field>
        <operation>equals</operation>
        <value>LAST_N_MONTHS:3</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Timesheet__c.Timesheet</value>
    </filters>
    <label>Pending Payments</label>
    <language>en_US</language>
    <sharedTo>
        <group>Timesheet_Finance_team</group>
        <group>Timesheet_Manager</group>
    </sharedTo>
</ListView>